deleting message feature and public chatting added

--- a/app/src/main/res/layout/item_recieve_group.xml
+++ b/app/src/main/res/layout/item_recieve_group.xml
@@ -4,21 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:padding="5dp">
+    android:layout_marginTop="5dp">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/sent_drawable"
+        android:background="@drawable/recieve_drawable"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="5dp">
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+        <View
+            android:id="@+id/view7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#83303030" />
 
         <ImageView
-            android:id="@+id/image_sent"
+            android:id="@+id/image_recieve"
             android:layout_width="200dp"
             android:layout_height="130dp"
             android:layout_margin="5dp"
@@ -27,28 +39,25 @@
             app:srcCompat="@drawable/avatar" />
 
         <TextView
-            android:id="@+id/message_sent"
+            android:id="@+id/message_recieve"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
+            android:paddingLeft="10dp"
             android:paddingTop="5dp"
-            android:paddingRight="10dp"
+            android:paddingRight="15dp"
             android:paddingBottom="5dp"
             android:text="TextView"
             android:textSize="18sp" />
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/feeling_sent"
+        android:id="@+id/feeling_recieve"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_fb_love" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
