--- a/app/src/main/res/layout/item_sent_group.xml
+++ b/app/src/main/res/layout/item_sent_group.xml
@@ -17,6 +17,19 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteY="5dp">
 
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:textColor="@android:color/white"
+            android:textSize="12sp" />
+        <View
+            android:id="@+id/view7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#83303030" />
+
         <ImageView
             android:id="@+id/image_sent"
             android:layout_width="200dp"
